# mastodon-api

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/mastdoon_api/: all.html  index.html  sidebar-items.js  struct.MastodonClient.html
docs/mastdoon_api/error/: enum.MastodonError.html  index.html  sidebar-items.js  type.Result.html
docs/mastdoon_api/methods/: index.html  sidebar-items.js
docs/mastdoon_api/models/: index.html  sidebar-items.js
docs/mastdoon_api/paging/: index.html  sidebar-items.js  struct.PagedRequest.html
docs/mastdoon_api/streaming/: enum.MastodonEvent.html  enum.StreamEvent.html  index.html  (+2 more)
docs/mastodon_api/: all.html  index.html  struct.MastodonClient.html
examples/: admin_actions.rs  announcements.rs  auto_moderation_bot.rs  basic_posting.rs  interaction_bot.rs  push_notifications.rs  search_builder.rs  streaming_bot.rs
src/: error.rs  lib.rs  paging.rs  streaming.rs
src/methods/: accounts.rs  announcements.rs  apps.rs  conversations.rs  domain_blocks.rs  emojis.rs  endorsements.rs  filters.rs  follow_requests.rs  instance.rs  lists.rs  markers.rs  media.rs  mod.rs  notifications.rs  preferences.rs  push.rs  reports.rs  search.rs  statuses.rs  suggestions.rs  tags.rs  timelines.rs  trends.rs
src/models/: account.rs  announcement.rs  conversations.rs  extras.rs  filters.rs  instance.rs  marker.rs  media.rs  mod.rs  poll.rs  preferences.rs  push.rs  report.rs  search.rs  status.rs  suggestion.rs  tag.rs
tests/: api_tests.rs
(+326 files in other folders)
